Get Appointments by doctor or patient ID methods

--- a/patient-manager-spring/src/main/resources/application.properties
+++ b/patient-manager-spring/src/main/resources/application.properties
@@ -1,14 +1,18 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.generate-unique-name=true
-
+#H2 DATABASE PROPERTIES
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.generate-unique-name=true
 #spring.jpa.show-sql=true
-#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
-#spring.datasource.url = jdbc:mysql://localhost:3306/project-management-tool
-#spring.datasource.username=admin
-#spring.datasource.password=modeB
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.hibernate.ddl-auto=update
+#MySQL DATABASE PROPERTIES
+spring.jpa.show-sql=true
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+spring.datasource.url = jdbc:mysql://localhost:3306/patient-manager
+spring.datasource.username=admin
+spring.datasource.password=modeB
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
