--- a/patient-manager-spring/src/main/resources/application.properties
+++ b/patient-manager-spring/src/main/resources/application.properties
@@ -9,7 +9,7 @@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
-spring.datasource.url = jdbc:mysql://localhost:3306/patient-manager
+spring.datasource.url = jdbc:mysql://localhost:3306/patient-manager?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=admin
 spring.datasource.password=modeB
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
