--- a/patient-manager-react/package.json
+++ b/patient-manager-react/package.json
@@ -31,7 +31,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:8080",
+  "proxy": "http://vita-healthcare.herokuapp.com",
   "browserslist": {
     "production": [
       ">0.2%",
