--- a/patient-manager-spring/src/main/resources/application.properties
+++ b/patient-manager-spring/src/main/resources/application.properties
@@ -4,6 +4,7 @@
 #spring.datasource.generate-unique-name=true
 #spring.jpa.show-sql=true
 
+server.port = 5000
 
 #MySQL DATABASE PROPERTIES
 spring.jpa.show-sql=true
