--- a/patient-manager-react/package.json
+++ b/patient-manager-react/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
+    "dateformat": "^4.5.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
+    "react-datetime-picker": "^3.2.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
@@ -23,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "aws s3 cp --recursive ./build s3://vita-healthcare-bucket"
   },
   "eslintConfig": {
     "extends": [
