--- a/patient-manager-react/package.json
+++ b/patient-manager-react/package.json
@@ -13,7 +13,6 @@
     "dateformat": "^4.5.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
-    "react-datetime-picker": "^3.2.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
@@ -35,7 +34,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://vita-dev.us-east-1.elasticbeanstalk.com",
+  "proxy": "http://localhost:5000",
   "browserslist": {
     "production": [
       ">0.2%",
