--- a/patient-manager-react/package.json
+++ b/patient-manager-react/package.json
@@ -34,7 +34,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://vita.us-east-2.elasticbeanstalk.com/",
   "browserslist": {
     "production": [
       ">0.2%",
