--- a/patient-manager-react/package.json
+++ b/patient-manager-react/package.json
@@ -34,7 +34,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": " https://cors-everywhere-me.herokuapp.com/",
+  "proxy": "https://cors-anywhere.herokuapp.com/",
   "browserslist": {
     "production": [
       ">0.2%",
