--- a/patient-manager-react/package.json
+++ b/patient-manager-react/package.json
@@ -26,6 +26,12 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "proxy": "http://localhost:8080",
   "browserslist": {
     "production": [
