--- a/patient-manager-react/package.json
+++ b/patient-manager-react/package.json
@@ -11,11 +11,11 @@
     "classnames": "^2.2.6",
     "dateformat": "^4.5.1",
     "jwt-decode": "^3.1.2",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^4.0.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.0"
@@ -32,7 +32,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:8080",
+  "proxy": "http://localhost:3000",
   "browserslist": {
     "production": [
       ">0.2%",
