--- a/patient-manager-react/package.json
+++ b/patient-manager-react/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
     "dateformat": "^4.5.1",
+    "google-map-react": "^2.1.9",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
